    =============================
    Improvements
        - Upgrade Reflections to 0.9.9-RC2
        - Upgrade Guava to 15.0
        - Support Japanese characters in reporting
        - Internalization reporting module
        - Improve UIs
        - Update mobile edition
    
    Bug Fixes
        - Can not save user in some special case
        - Minor bug fixes in inviting project member
    
    
    Changelog from MyCollab 4.2.0
    =============================
    Improvements
        - Upgrade Vaadin to 7.2.4
        - Upgrade HirakiCP to 4.2.0
        - Update mobile edition
        - Improve Gantt chart display 
        - Add Simple view of phase
        - Support Japanese localization
        - Emails are localized per language
        - Support lazy load view
        - Allow user can select the default system language
        - Focus in system stable by adding many unit tests and refactor the system
        
    Bug Fixes
        - Exception is thrown when user save customized view
        - Exception is thrown when user save search result
        - Can not save login credential in mobile edition    
        - Can not add new role or edit role name of existing item
        - Save duplicate monitor items
    
    Changelog from MyCollab 4.1.1
    =============================
    Improvements
        - Upgrade Vaadin to 7.2.2
        - Upgrade Apache Camel to 2.13.1
        - Refactor reporting engine and improve the output of report
        - Adjust JVM parameters to avoid the PerGem error
        - Update icons to make UI more intuitive
        - Add welcome message for view that has empty retrieved items.
        - Add push service in Vaadin to lazy load heavy task on UI
        - Remove border of buttons
        - Texts of emails
        
        
    Bug Fixes
        - Invite and accept invitation causes NPE in several exceptional cases.
        - Can not assign role to new user
        - Several wrong link in emails
        - Calendar style issue